feat: display form field errors in add_pet

--- a/templates/add_pet.html
+++ b/templates/add_pet.html
@@ -10,6 +10,10 @@
   <div>
     {{ field.label }}
     {{ field }}
+
+    {% for error in field.errors %}
+      {{ error }}
+    {% endfor %}
   </div>
   {% endfor %}
   <button>Submit</button>
