--- a/templates/pet_info.html
+++ b/templates/pet_info.html
@@ -12,17 +12,5 @@
 <div>{{ pet.age }} years old</div>
 {% endif %}
 
-<form method="POST">
-  {{ form.hidden_tag() }}
-  {% for field in form if field.widget.input_type != "hidden" %}
-  <div>
-    {{ field.label }}
-    {{ field }}
-
-    {% for error in field.errors %}
-      {{ error }}
-    {% endfor %}
-  </div>
-  {% endfor %}
-</form>
+{% include 'partials/basic_form.html' %}
 {% endblock %}
